fixed x overflow

--- a/src/templates/BlogPost/index.scss
+++ b/src/templates/BlogPost/index.scss
@@ -9,10 +9,10 @@
     max-width: calc(100% - 48px);
   }
 
-  /*   pre,
+  pre,
   code {
     display: block;
     white-space: pre-wrap;
     word-break: break-word;
-  } */
+  }
 }
